docs/kubernetes/config_examples/f5-k8s-bigip-ctlr_ha-standby.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr-deployment
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      name: k8s-bigip-ctlr
      labels:
        app: k8s-bigip-ctlr
    spec:
      serviceAccountName: bigip-ctlr-serviceaccount
      containers:
        - name: k8s-bigip-ctlr
          image: "f5networks/k8s-bigip-ctlr:1.3.0"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            "--bigip-url=<url-for-standby-bigip>",
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "--bigip-partition=myPartition",
            "--use-secrets=true",
            "--resolve-ingress-names=LOOKUP",
            "--pool-member-type=cluster",
            "--node-label-selector=f5device=standby"
            ]
      imagePullSecrets:
        - name: f5-docker-images
        - name: bigip-login
