docs/kubernetes/config_examples/f5-k8s-bigip-ctlr_image-secret.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr-deployment
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      name: k8s-bigip-ctlr
      labels:
        app: k8s-bigip-ctlr
    spec:
      serviceAccountName: bigip-ctlr-serviceaccount
      containers:
        - name: k8s-bigip-ctlr
          # replace the version as needed
          image: "f5networks/k8s-bigip-ctlr:1.3.0"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "--bigip-url=10.190.24.171",
            "--bigip-partition=kubernetes",
            # To manage a single namespace, enter it below
            # (required in v1.0.0), e.g.:
            #"--namespace=default",
            # To manage multiple namespaces, enter a separate flag for each
            # namespace below (as of v1.1.0), e.g.:
            #"--namespace=myNamespace1",
            #"--namespace=myNamespace2",
            # To manage all namespaces, omit the `namespace` entry or comment
            # it out
            # (default as of v1.1.0)
            # Tell the k8s-bigip-ctlr to load SSL profiles from Kubernetes
            # Secrets; set to "false" if you only want to use preconfigured
            # BIG-IP SSL profiles
            # (available as of v1.3.0)
            "use-secrets=true",
            # Tells the k8s-bigip-ctlr to use local DNS to resolve hostnames
            # Can be replaced with custom DNS server IP or left blank
            # (available as of v1.3.0)
            "resolve-ingress-names=LOOKUP"
            ]
      imagePullSecrets:
        - name: f5-docker-images
