docs/kubernetes/config_examples/f5-ephemeral-store-k8s-example.yaml
# A headless service used for DNS resolution
apiVersion: v1
kind: Service
metadata:
  labels:
    role: ephemeral-store-info-service
  name: ephemeral-store-info
spec:
  ports:
    - name: proto
      protocol: TCP
      port: 8087
      targetPort: 8087
  selector:
    name: ephemeral-store
  clusterIP: None
---
# The ephemeral store service that exposes the ephemeral store Pods
apiVersion: v1
kind: Service
metadata:
  labels:
    role: ephemeral-store-service
  name: ephemeral-store
spec:
  ports:
    - name: proto
      protocol: TCP
      port: 8087
      targetPort: 8087
  selector:
    name: ephemeral-store
---
# Creates a cluster of five (5) pods running the ephemeral store service.
# For Kubernetes v1.4.x use PetSet:
#apiVersion: apps/v1alpha1
#kind: PetSet
# For v1.6.x and higher use StatefulSet:
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: ephemeral-store
spec:
  serviceName: "ephemeral-store-info"
  replicas: 5
  template:
    metadata:
      labels:
        name: ephemeral-store
# NOTE: Add the annotation below in Kubernetes v1.4
#     annotations:
#       pod.alpha.kubernetes.io/initialized: "true"
    spec:
      terminationGracePeriodSeconds: 0
      containers:
      - name: ephemeral-store
        # The ephemeral store image
        image: f5networks/ephemeral-store:1.0.0
        ports:
        - containerPort: 8087
        resources:
          requests:
            cpu: "1"
            memory: "1Gi"
        volumeMounts:
         - mountPath: /var/lib/riak
           name: platform-data-dir
         - mountPath: /var/log/riak
           name: platform-log-dir
         - mountPath: /riak-bootstrap/ca-certs
           name: ca-certs
        livenessProbe:
          exec:
            command:
            - riak-admin
            - test
          initialDelaySeconds: 15
          periodSeconds: 30
        readinessProbe:
          exec:
            command:
            - /riak-bootstrap/readiness-probe.sh
          initialDelaySeconds: 15
          periodSeconds: 30
      volumes:
        - name: platform-data-dir
          emptyDir: {}
        - name: platform-log-dir
          emptyDir: {}
        - name: ca-certs
          secret:
            # name of the Secret containing both the root certificate and key
            secretName: ephemeral-store-root
