docs/kubernetes/config_examples/f5-k8s-ingress-fanout.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ing-fanout
  namespace: default
  annotations:
    # Provide an IP address for the BIG-IP virtual server;
    # Set to "controller-default" if you want to use the Controller's
    # "default-ingress-ip" (introduced in v1.4.0)
    virtual-server.f5.com/ip: "1.2.3.4"
    # Specify the BIG-IP partition where the Controller should create the virtual server.
    virtual-server.f5.com/partition: "k8s"
    # Specify the desired load balancing algorithm
    virtual-server.f5.com/balance: "least-connections-node"
spec:
  rules:
  - host: mysite.example.com
    http:
      paths:
      - path: /app1
        backend:
          serviceName: myService1
          servicePort: 80
      - path: /app2
        backend:
          serviceName: myService2
          servicePort: 80
