docs/kubernetes/config_examples/f5-k8s-ingress-tls-secret.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingressTLS
  namespace: default
  annotations:
    # Provide an IP address from the external VLAN on your BIG-IP device;
    # use DNS lookup; or use the default IP
    virtual-server.f5.com/ip: "1.2.3.4"
    # Specify the BIG-IP partition where the Controller should create the virtual server.
    virtual-server.f5.com/partition: "k8s"
    # Allow/deny TLS connections
    ingress.kubernetes.io/ssl-redirect: "true"
    # Allow/deny HTTP connections
    ingress.kubernetes.io/allow-http: "false"
spec:
  tls:
    # Provide the name of the Secret containing the cert and key you want to use.
    - secretName: myTLSSecret
  backend:
    # Provide the name of a single Kubernetes Service you want to expose to external
    # traffic using TLS
    serviceName: myService
    servicePort: 443


apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: no-rules-map
spec:
  tls:
  - secretName: testsecret
  backend:
    serviceName: s1
    servicePort: 80
