docs/kubernetes/config_examples/f5-k8s-ingress-virtual-hosting.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ing-virtual-hosting
 namespace: default
 annotations:
  # See the k8s-bigip-ctlr documentation for information about
  # all Ingress Annotations
  # http://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest/#supported-ingress-annotations
  virtual-server.f5.com/ip: "1.2.3.4"
  virtual-server.f5.com/partition: "k8s"
  virtual-server.f5.com/balance: "least-connections-node"
  virtual-server.f5.com/http-port: "80"
spec:
 rules:
 # URL
 - host: site1.example.com
   http:
     # path to Service from URL
     paths:
       - path: /app1
         backend:
           serviceName: myService1
           servicePort: 80
 # URL
 - host: site2.example.com
   http:
     # path to Service from URL
     paths:
       - path: /app2
         backend:
           serviceName: myService2
           servicePort: 80
