docs/kubernetes/config_examples/f5-k8s-ingress-virtual-hosting_all.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: ing-virtual-hosting
 namespace: default
 annotations:
  # See the k8s-bigip-ctlr documentation for information about
  # all Ingress Annotations
  # https://clouddocs.f5.com/products/connectors/k8s-bigip-ctlr/latest/#supported-ingress-annotations
  virtual-server.f5.com/ip: "1.2.3.4"
  virtual-server.f5.com/partition: "k8s"
  virtual-server.f5.com/balance: "least-connections-node"
  virtual-server.f5.com/http-port: "80"
spec:
 rules:
 # Omit the host name (URL) to match all hosts
 - http:
     # Provide the path to each Service you want to proxy
     paths:
     - path: /app1
       backend:
         serviceName: myService1
         servicePort: 80
     - path: /app2
       backend:
         serviceName: myService2
         servicePort: 80
