docs/kubernetes/config_examples/f5-k8s-single-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: singleIngress1
  namespace: default
  annotations:
    # Provide an IP address from the external VLAN on your BIG-IP device;
    # use DNS lookup; or use the default IP
    virtual-server.f5.com/ip: "1.2.3.4"
    # Specify the BIG-IP partition where the Controller should create the virtual server.
    virtual-server.f5.com/partition: "k8s"
spec:
  backend:
    # The name of the Service you want to expose to external traffic
    serviceName: myService
    servicePort: 80
