docs/kubernetes/config_examples/f5-k8s_multi-tenant-1.yaml
# Deploy a BIG-IP Controller instance that creates objects for all namespaces
# in the "ose-cluster" partition on the BIG-IP system
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr-deployment
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      name: k8s-bigip-ctlr
      labels:
        app: k8s-bigip-ctlr
    spec:
      serviceAccountName: bigip-ctlr-serviceaccount
      containers:
        - name: k8s-bigip-ctlr-1
          image: "f5networks/k8s-bigip-ctlr:1.3.0"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            "--bigip-partition=ose-cluster",
            "--bigip-url=10.190.24.171",
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "use-secrets=true",
            ...
            ]

---
# Ingress resource for namespace 1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: photos-ingress
 namespace: photos
 annotations:
  virtual-server.f5.com/ip: "1.2.3.4"
  virtual-server.f5.com/partition: "ose-cluster"
  virtual-server.f5.com/balance: "least-connections-node"
  virtual-server.f5.com/http-port: "443"
  ingress.kubernetes.io/ssl-redirect: "true"
  ingress.kubernetes.io/allow-http: "false"
spec:
  rules:
  - host: mysite.example.com
    http:
      paths:
      - path: /photos/app1
        backend:
          serviceName: myService1
          servicePort: 443
      - path: /photos/app2
        backend:
          serviceName: myService2
          servicePort: 443
  tls:
    - secretName: /Common/clientssl

---
# Ingress resource for namespace 2
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
 name: videos-ingress
 namespace: videos
 annotations:
  virtual-server.f5.com/ip: "10.11.12.13"
  virtual-server.f5.com/partition: "ose-cluster"
  virtual-server.f5.com/balance: "least-connections-node"
  virtual-server.f5.com/http-port: "443"
  ingress.kubernetes.io/ssl-redirect: "true"
  ingress.kubernetes.io/allow-http: "false"
spec:
  rules:
  - host: mysite.example.com
    http:
      paths:
      - path: /videos/app1
        backend:
          serviceName: myService1
          servicePort: 443
      - path: /videos/app2
        backend:
          serviceName: myService2
          servicePort: 443
  tls:
    - secretName: /Common/clientssl
