docs/kubernetes/config_examples/f5-k8s_multi-tenant-2b_custB.yaml
# Deploy a BIG-IP Controller instance in the custB namespace
# Manages the customerB partition on the BIG-IP system
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: custB_k8s-bigip-ctlr
  namespace: bigip-controllers
spec:
  replicas: 1
  template:
    metadata:
      name: custB_k8s-bigip-ctlr
      labels:
        app: k8s-bigip-ctlr
    spec:
      serviceAccountName: bigip-ctlr-serviceaccountB
      containers:
        - name: custB_k8s-bigip-ctlr
          image: "f5networks/k8s-bigip-ctlr:1.3.0"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            "--bigip-partition=customerB",
            "--bigip-url=10.190.24.171",
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "use-secrets=true",
            "--namespace=custB",
            ...
            ]
---
# Name-based virtual hosting ingress serving traffic for all hosts
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: custB.com
  namespace: custB
  annotations:
    # IP address of a BIG-IP pool member
    virtual-server.f5.com/ip: "10.12.13.14"
    # BIG-IP partition
    virtual-server.f5.com/partition: "customerB"
    # Load balancing algorithm
    virtual-server.f5.com/balance: "least-connections-node"
spec:
  rules:
  - http:
      paths:
      - path: /myApp1
        backend:
          serviceName: myService1
          servicePort: 80
      - path: /myApp2
        backend:
          serviceName: myService2
          servicePort: 80
