docs/kubernetes/config_examples/f5-k8s_multi-tenant-3.yaml
# Deploy a BIG-IP Controller instance that
# manages the ctlr1 partition on the BIG-IP system
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr_1
  namespace: bigip-controllers
spec:
  replicas: 1
  template:
    metadata:
      name: k8s-bigip-ctlr_1
      labels:
        app: k8s-bigip-ctlr
    spec:
      serviceAccountName: bigip-ctlr-serviceaccount
      containers:
        - name: k8s-bigip-ctlr_1
          image: "f5networks/k8s-bigip-ctlr:1.3.0"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            "--bigip-partition=ctlr1",
            "--bigip-url=10.190.24.171",
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "use-secrets=true",
            ...
            ]

---
# manages the ctlr2 partition on the BIG-IP system
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: k8s-bigip-ctlr_2
  namespace: bigip-controllers
spec:
  replicas: 1
  template:
    metadata:
      name: k8s-bigip-ctlr_2
      labels:
        app: k8s-bigip-ctlr
    spec:
      serviceAccountName: bigip-ctlr-serviceaccount
      containers:
        - name: k8s-bigip-ctlr_2
          image: "f5networks/k8s-bigip-ctlr:1.3.0"
          command: ["/app/bin/k8s-bigip-ctlr"]
          args: [
            "--bigip-partition=ctlr2",
            "--bigip-url=10.190.24.171",
            "--bigip-username=$(BIGIP_USERNAME)",
            "--bigip-password=$(BIGIP_PASSWORD)",
            "use-secrets=true",
            ...
            ]

---
# create an Ingress for a Service in the ctlr2 partition
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress1
  namespace: default
  annotations:
    # Provide an IP address from the external VLAN on your BIG-IP device
    virtual-server.f5.com/ip: "10.190.24.70"
    # Specify the BIG-IP partition containing the virtual server
    virtual-server.f5.com/partition: "ctlr2"
spec:
  backend:
    # The name of the Service you want to expose to external traffic
    serviceName: myService2
    servicePort: 80
